name:                file-fun
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/panavtec/file-fun#readme
license:             BSD3
license-file:        LICENSE
author:              Christian Panadero
maintainer:          panavtec@gmail.com
copyright:           Apache2
category:            katas
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.String.Strip
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable file-fun
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , file-fun
                     , mtl
                     , optparse-applicative
  default-language:    Haskell2010

test-suite file-fun-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , file-fun
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/panavtec/file-fun
